# snuffkin-python-project-template

./: .editorconfig  .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Makefile  README.md  README.template.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
config/: logging.yaml
docs/: CONTRIBUTING.md  index.md
docs/css/: custom.css
docs/developer_guidelines/: development_flow.md  setup.md
docs/usage/: getting_started.md
docs_scripts/: gen_ref_nav.py
src/python_project_template/: app.py  hello.py
tests/python_project_template/: test_hello.py
